// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should subscribe 1`] = `
"[DBG] journey.begin({{
  pulseCount: 200,
  pulseTime: 10,
  serverUrl: undefined,
  cleanStart: false
}})
[DBG] sending http request to: http://localhost:19090/subscribe
[DBG] headers { 'last-event-id': '0', includes: '' }
[DBG] socket opened!
[INF] start receiving data
[DBG] handling events #1 - #10
[DBG] done
[INF] stop processing events
[DBG] journey.begin({{
  pulseCount: 200,
  pulseTime: 10,
  serverUrl: undefined,
  cleanStart: false
}})
[DBG] sending http request to: http://localhost:19090/subscribe
[DBG] headers { 'last-event-id': '10', includes: '' }
[DBG] socket opened!
[INF] start receiving data
[DBG] handling events #11 - #20
[DBG] done
[INF] stop processing events"
`;

exports[`should subscribe with filter 1`] = `
"[DBG] journey.begin({{
  pulseCount: 200,
  pulseTime: 10,
  serverUrl: undefined,
  cleanStart: false
}})
[DBG] sending http request to: http://localhost:19091/subscribe
[DBG] headers { 'last-event-id': '0', includes: 'type_1,type_2' }
[DBG] socket opened!
[INF] start receiving data
[DBG] handling events #1 - #29
[DBG] done
[INF] stop processing events"
`;
